// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LobeOpenRouterAI > models > should get models with frontend models data 1`] = `
[
  {
    "contextWindowTokens": 131072,
    "description": "Reflection Llama-3.1 70B is trained with a new technique called Reflection-Tuning that teaches a LLM to detect mistakes in its reasoning and correct course.

The model was trained on synthetic data.

_These are free, rate-limited endpoints for [Reflection 70B](/models/mattshumer/reflection-70b). Outputs may be cached. Read about rate limits [here](/docs/limits)._",
    "displayName": "Reflection 70B (free)",
    "enabled": false,
    "functionCall": true,
    "id": "mattshumer/reflection-70b:free",
    "maxTokens": 4096,
    "pricing": {
      "input": 0,
      "output": 0,
    },
    "reasoning": true,
    "releasedAt": "2024-09-06",
    "vision": false,
  },
]
`;

exports[`LobeOpenRouterAI > models > should handle fetch error gracefully 1`] = `
[
  {
    "contextWindowTokens": 131072,
    "description": "Reflection Llama-3.1 70B is trained with a new technique called Reflection-Tuning that teaches a LLM to detect mistakes in its reasoning and correct course.

The model was trained on synthetic data.

_These are free, rate-limited endpoints for [Reflection 70B](/models/mattshumer/reflection-70b). Outputs may be cached. Read about rate limits [here](/docs/limits)._",
    "displayName": "Reflection 70B (free)",
    "enabled": false,
    "functionCall": false,
    "id": "mattshumer/reflection-70b:free",
    "maxTokens": 4096,
    "pricing": {
      "input": 0,
      "output": 0,
    },
    "reasoning": false,
    "releasedAt": "2024-09-06",
    "vision": false,
  },
]
`;

exports[`LobeOpenRouterAI > models > should handle fetch failure gracefully 1`] = `
[
  {
    "contextWindowTokens": 131072,
    "description": "Reflection Llama-3.1 70B is trained with a new technique called Reflection-Tuning that teaches a LLM to detect mistakes in its reasoning and correct course.

The model was trained on synthetic data.

_These are free, rate-limited endpoints for [Reflection 70B](/models/mattshumer/reflection-70b). Outputs may be cached. Read about rate limits [here](/docs/limits)._",
    "displayName": "Reflection 70B (free)",
    "enabled": false,
    "functionCall": false,
    "id": "mattshumer/reflection-70b:free",
    "maxTokens": 4096,
    "pricing": {
      "input": 0,
      "output": 0,
    },
    "reasoning": false,
    "releasedAt": "2024-09-06",
    "vision": false,
  },
]
`;
